# my-python-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: workflow.yml
src/my_package/: my_hello.py
tests/: test_workflow.py
tests/my_package/: test_my_hello.py
